--- a/assets/css/style.tailwind.css
+++ b/assets/css/style.tailwind.css
@@ -1853,7 +1853,7 @@ i.fa-file-code{font-weight: 100;}
 .main-timeline4 .timeline-content:before,.main-timeline4 .timeline:before{top:50%;transform:translateY(-50%);content:""}
 .main-timeline4 .timeline{width:50%;padding-left:100px;float:right;position:relative}
 .main-timeline4 .timeline:before{width:20px;height:20px;border-radius:50%;background:oklch(78.9% 0.154 211.53);border:5px solid #333;position:absolute;left:-10px;}
-.main-timeline4 .timeline-content{display:block;padding-left:150px;position:relative}
+.main-timeline4 .timeline-content{display:block;position:relative}
 .main-timeline4 .timeline-content:before{width:90px;border-top:3px dotted #b57dff5e;position:absolute;left:-92px}
 .main-timeline4 .year{display:inline-block;width:120px;text-align:center;position:absolute;top: 50%;transform: translateY(-50%);left:-120%}
 .main-timeline4 .inner-content{padding:20px 0}
@@ -1862,7 +1862,7 @@ i.fa-file-code{font-weight: 100;}
 .main-timeline4 .description{font-size:14px;color:#dadada;margin:0 0 5px}
 .main-timeline4 .timeline:nth-child(2n){padding:0 100px 0 0}
 .main-timeline4 .timeline:nth-child(2n) .timeline-content:before,.main-timeline4 .timeline:nth-child(2n) .year,.main-timeline4 .timeline:nth-child(2n):before{left:auto;right:-10px}
-.main-timeline4 .timeline:nth-child(2n) .timeline-content{padding:24px 150px 24px 24px}
+.main-timeline4 .timeline:nth-child(2n) .timeline-content{padding:24px}
 .main-timeline4 .timeline:nth-child(2n) .timeline-content:before{right:-92px}
 .main-timeline4 .timeline:nth-child(2n) .year{right:-120%}
 .main-timeline4 .timeline:nth-child(2){margin-top:44%}
