--- a/assets/css/style.tailwind.css
+++ b/assets/css/style.tailwind.css
@@ -1848,8 +1848,8 @@
 }
 .fas{font-size: 5rem;} 
 i.fa-file-code{font-weight: 100;}
-.main-timeline4:before{content:"";width:5px;height:83%;border-color: 
-  transparent;border-radius:5px;background-color: #7d86ff3b;position:absolute;left:50%;top:10%;transform:translateX(-50%)}
+.main-timeline4:before{content:"";width:5px;height:85%;border-color: 
+  transparent;border-radius:5px;background-color: #7d86ff3b;position:absolute;left:50%;top:9%;transform:translateX(-50%)}
 .main-timeline4 .timeline-content:before,.main-timeline4 .timeline:before{top:50%;transform:translateY(-50%);content:""}
 .main-timeline4 .timeline{width:50%;padding-left:100px;float:right;position:relative}
 .main-timeline4 .timeline:before{width:20px;height:20px;border-radius:50%;background:oklch(78.9% 0.154 211.53);border:5px solid #333;position:absolute;left:-10px;}
@@ -1956,11 +1956,11 @@ i.fa-file-code{font-weight: 100;}
     position: static;
     display: block;
     width: auto;
-    margin-bottom: 1em .5em -2em 0;
+    margin: 1em .5em -2em 0;
     left: auto;
     top: auto;
     transform: none;
-    text-align: left;
+    text-align: right;
   }
   .main-timeline4 .inner-content {
     padding: 0.5em 0;
