--- a/www/assets/css/style.css
+++ b/www/assets/css/style.css
@@ -1010,6 +1010,7 @@ filter:blur(10px);
 #mobile-menu a.mobile-nav-link {
     padding: .75em 0 .75em 1em;
     font-size: 1.2em;
+    margin-top: .6em;
     backdrop-filter: blur(5px);
     background-color: rgba(0, 0, 0, 0.4);
 }
